--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ input, button, textarea, select {
   
 p, h1, h2, h3, h4, h5, h6 {
     overflow-wrap: break-word;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding-top: 1em;
 } /* Consider applying this to ALL elements. Also, consider adding `hyphen: auto;`. */ 
   
@@ -52,17 +52,17 @@ h1 {
     padding: 0;
 }
 
-header {
-    line-height: 2em;
-    font-weight: 800;
-    font-size: 2em;
+header h1 {
+    line-height: 4rem;
+    font-size: 4rem;
     color: #D14D41;
-    font-family: Helvetica, Arial, sans-serif;
+    font-weight: bolder;
 }
 
 a#title,
 a#title:visited {
     color: #D14D41;
+    font-weight: 900;
 }
 
 a#title:hover {
@@ -76,7 +76,7 @@ section {
 }
 
 p {
-    color: #000000aa;
+    color: #1b1b1b;
 }
 
 .intro {
@@ -109,46 +109,10 @@ a:focus {
     outline: none;
 }
 
-form {
-    margin: 1.5rem 0;
-}
-
-#bd-email {
-    font-family: Helvetica, Arial, sans-serif;
-    border-radius: 10px;
-    border: solid 1px #00000022;
-    padding: 0.2rem 0.5rem;
-}
-
-#bd-email:hover,
-#bd-email:focus {
-    outline: none;
-    outline: solid 2px cornflowerblue;
-}
-
-#bd-submit {
-    font-family: Helvetica, Arial, sans-serif;
-    border-radius: 10px;
-    border: solid 1px #00000022;
-    padding: 0.2rem 0.5rem;
-    transition: background-color 0.3s, color 0.3s;
-}
-
-#bd-submit:hover,
-#bd-submit:focus {
-    background-color: cornflowerblue;
-    color: #ffffffdd;
-    outline: none;
-}
-
-.emoji {
-    font-size: 2em;
-    transition: transform 1s;
-    position: absolute;
-}
-
-.emoji:hover {
-    transform: rotate(359deg);
-    cursor: default;
-    transition: transform 2s ease-out;
+.note {
+    padding: 0;
+    margin: 0;
+    line-height: 1.7em;
+    font-size: 0.7em;
+    color: #1b1b1b55;
 }
