--- a/styles.css
+++ b/styles.css
@@ -48,15 +48,29 @@ body {
     padding: 2rem;
 }
 
-h1 {
+header h1 {
     padding: 0;
+    margin: 0;
 }
 
-header h1 {
+#title {
+    
     line-height: 4rem;
     font-size: 4rem;
     color: #D14D41;
     font-weight: bolder;
+}
+
+nav {
+    margin-top: 1rem;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+nav ul {
+    list-style-type: none;
+    display: flex;
+    padding: 0;
+    gap: 1rem;
 }
 
 a#title,
@@ -73,6 +87,11 @@ section {
     background-color: #FFF8E7;
     max-width: 60ch;
     margin: 0 0 1rem;
+}
+
+h1 {
+    color: #006c67;
+    padding-top: 1rem;
 }
 
 p {
