--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,7 @@ nav {
 nav ul {
     list-style-type: none;
     display: flex;
+    flex-wrap: wrap;
     padding: 0;
     gap: 1rem;
 }
@@ -89,16 +90,25 @@ section {
     margin: 0 0 1rem;
 }
 
-h1 {
+h1, h2 {
     color: #006c67;
     padding-top: 1rem;
+}
+
+h1 {
+    font-size: 2rem;
 }
 
 p {
     color: #1b1b1b;
 }
 
-.intro {
+ul {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 1rem 0  0 1.5rem;
+}
+
+.intro, .email {
     font-weight: bold;
     color: #006c67;
 }
@@ -129,8 +139,8 @@ a:focus {
 }
 
 .note {
-    padding: 0;
-    margin: 0;
+    /* padding: 0;
+    margin: 0; */
     line-height: 1.7em;
     font-size: 0.7em;
     color: #1b1b1b55;
