--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,26 @@
-/* My default styles—a bit of a reset and a bit of a normalization, based on 
-["A Modern CSS Reset" by Josh W. Comeau](https://www.joshwcomeau.com/css/custom-css-reset/).
-Remember to use `*property*:revert` to return specific elements to browser defaults. 
-Use `@import url("./cobbland-style.css");` to import into the default stylesheet.
-(Note: Nothing is done to fix apple product specific problems; y'all are on your own.) */
+/* :root {
+    --bg-color: #fff8e7;
+    --title-color: #D14D41;
+    --heading-color: #006c67;
+    --text-color: #1b1b1b;
+    --link-color: rgb(193, 83, 0);
+    --link-hover-color: #ED6D32;
+    --note-color: #1b1b1b55;
+    --main-font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+} */
+
+:root {
+    --border-color: #706DEB;
+    --bg-color: #2E2C9B;
+    --title-color: #706DEB;
+    --heading-color: #706DEB;
+    --text-color: #706DEB;
+    --link-color: #706DEB;
+    --link-hover-color: #706DEB;
+    --note-color: #706DEB;
+    --main-font-family: 'Courier New', Courier, monospace; 
+    
+}
 
 *, *::before, *::after {
     box-sizing: border-box;
@@ -12,40 +30,34 @@ Use `@import url("./cobbland-style.css");` to import into the default stylesheet
     margin: 0;
 }
   
-body {
-    line-height: 1.5; /* This requires customizing the line height for larger text. */
-}
-  
 img, picture, video, canvas, svg {
     display: block;
     max-width: 100%; /* Use `max-width: revert;` if an image is meant to overflow */
 }
-  
+
+p, h1, h2, h3, h4, h5, h6 {
+    font-family: var(--main-font-family);
+}
+
 input, button, textarea, select {
     font: inherit;
 }
-  
-p, h1, h2, h3, h4, h5, h6 {
-    overflow-wrap: break-word;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding-top: 1em;
-} /* Consider applying this to ALL elements. Also, consider adding `hyphen: auto;`. */ 
-  
-p {
-    text-wrap: pretty; /* May have a performance impact. */
-} /* Remember to use `p` instead of `div` in your HTML if you want this to work. 
-Also, consider setting `max-width: 60ch` or smaller. (ch being the width of "0" 
-in given `font-size`. (Maybe this belongs on a parent element, though.)*/
-  
-h1, h2, h3, h4, h5, h6 {
-    text-wrap: balance;
-}
-  
-/* End default styles. */
 
 body { 
-    background-color: #FFF8E7;
+    line-height: 1.5; /* This requires customizing the line height for larger text. */
+    background-color: var(--border-color);
     padding: 2rem;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    /* align-items: center; */
+}
+
+main {
+    background-color: var(--bg-color);
+    padding: 1rem;
+    width: 80ch;
+    height: max-content;
 }
 
 header h1 {
@@ -57,13 +69,13 @@ header h1 {
     
     line-height: 4rem;
     font-size: 4rem;
-    color: #D14D41;
+    color: var(--title-color);
     font-weight: bolder;
 }
 
 nav {
     margin-top: 1rem;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: var(--main-font-family);
 }
 
 nav ul {
@@ -76,22 +88,21 @@ nav ul {
 
 a#title,
 a#title:visited {
-    color: #D14D41;
+    color: var(--title-color);
     font-weight: 900;
 }
 
 a#title:hover {
-    color: #D14D41;
+    color: var(--bg-color);
+    background-color: var(--border-color);
 }
 
 section {
-    background-color: #FFF8E7;
-    max-width: 60ch;
     margin: 0 0 1rem;
 }
 
 h1, h2 {
-    color: #006c67;
+    color: var(--heading-color);
     padding-top: 1rem;
 }
 
@@ -100,17 +111,21 @@ h1 {
 }
 
 p {
-    color: #1b1b1b;
+    color: var(--text-color);
 }
 
 ul {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: var(--main-font-family);
     padding: 1rem 0  0 1.5rem;
 }
 
-.intro, .email {
+li {
+    color: var(--text-color);
+}
+
+.email {
     font-weight: bold;
-    color: #006c67;
+    color: var(--heading-color);
 }
 
 .construction {
@@ -125,7 +140,7 @@ ul {
 
 a,
 a:visited {
-    color: rgb(193, 83, 0);
+    color: var(--link-color);
     font-weight: bold;
     text-decoration: none;
     transition: color 0.3s;
@@ -133,8 +148,10 @@ a:visited {
 
 a:hover,
 a:focus {
-    text-decoration: wavy underline;
-    color: #ED6D32;
+    /* text-decoration: wavy underline; */
+    background-color: var(--border-color);
+    color: var(--bg-color);
+    color: var(--link-hover-color);
     outline: none;
 }
 
@@ -143,7 +160,7 @@ a:focus {
     margin: 0; */
     line-height: 1.7em;
     font-size: 0.7em;
-    color: #1b1b1b55;
+    color: var(--note-color);
 }
 
 .invisible {
