--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
-/* :root {
+:root {
+    --border-color: #fff8e7;
     --bg-color: #fff8e7;
     --title-color: #D14D41;
     --heading-color: #006c67;
@@ -7,9 +8,9 @@
     --link-hover-color: #ED6D32;
     --note-color: #1b1b1b55;
     --main-font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-} */
+}
 
-:root {
+/* :root {
     --border-color: #706DEB;
     --bg-color: #2E2C9B;
     --title-color: #706DEB;
@@ -20,7 +21,7 @@
     --note-color: #706DEB;
     --main-font-family: 'Courier New', Courier, monospace; 
     
-}
+} */
 
 *, *::before, *::after {
     box-sizing: border-box;
@@ -48,17 +49,17 @@ input, button, textarea, select {
 body { 
     line-height: 1.5; /* This requires customizing the line height for larger text. */
     background-color: var(--border-color);
-    padding: 2rem 1rem;
+    padding: 1rem;
     height: 100vh;
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     /* align-items: center; */
 }
 
 main {
     background-color: var(--bg-color);
     padding: 1rem;
-    width: min(95%, 80ch);
+    width: min(97%, 70ch);
     height: max-content;
 }
 
@@ -71,6 +72,7 @@ section {
     font-size: 4rem;
     color: var(--title-color);
     font-weight: bolder;
+    word-wrap: break-word;
 }
 
 header h1 {
@@ -82,7 +84,7 @@ nav ul {
     list-style-type: none;
     display: flex;
     flex-wrap: wrap;
-    padding: 0;
+    padding: 1rem 0 0 0;
     gap: 1rem;
 }
 
@@ -100,7 +102,7 @@ a#title:visited {
 
 a#title:hover {
     color: var(--bg-color);
-    background-color: var(--border-color);
+    background-color: var(--title-color);
 }
 
 h1, h2 {
@@ -149,7 +151,7 @@ a:visited {
 
 a:hover {
     /* text-decoration: wavy underline; */
-    background-color: var(--border-color);
+    background-color: var(--link-hover-color);
     color: var(--bg-color);
     text-decoration: none;
 }
