--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,23 @@
-:root {
+:root { /*C64 colors from https://www.pepto.de/projects/colorvic/*/
+    --black: #000000;
+    --white: #ffffff;
+    --red: #813338;
+    --cyan: #75cec8;
+    --purple: #8e3c97;
+    --green: #56ac4d;
+    --blue: #2e2c9b;
+    --yellow: #edf171;
+    --orange: #8e5029;
+    --brown: #553800;
+    --lt-red: #c46c71;
+    --dk-grey: #4a4a4a;
+    --md-grey: #7b7b7b;
+    --lt-green: #a9ff9f;
+    --lt-blue: #706deb;
+    --lt-grey: #b2b2b2;
+}
+
+/* :root {
     --border-color: #fff8e7;
     --bg-color: #fff8e7;
     --title-color: #D14D41;
@@ -8,6 +27,19 @@
     --link-hover-color: #ED6D32;
     --note-color: #1b1b1b55;
     --main-font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+} */
+
+:root {
+    --border-color: var(--dk-grey);
+    --border-color-alt: var(--lt-grey);
+    --bg-color: var(--lt-grey);
+    --title-color: var(--red);
+    --heading-color: var(--dk-grey);
+    --text-color: var(--black);
+    --link-color: var(--orange);
+    --link-hover-color: var(--purple);
+    --note-color: var(--md-grey);
+    --main-font-family: 'Courier New', Courier, monospace; 
 }
 
 /* :root {
@@ -20,7 +52,6 @@
     --link-hover-color: #706DEB;
     --note-color: #706DEB;
     --main-font-family: 'Courier New', Courier, monospace; 
-    
 } */
 
 *, *::before, *::after {
@@ -49,11 +80,14 @@ input, button, textarea, select {
 body { 
     line-height: 1.5; /* This requires customizing the line height for larger text. */
     background-color: var(--border-color);
-    padding: 1rem;
-    height: 100vh;
-    display: flex;
+    padding: min(3%, 1rem);
+    /* height: 100vh; */
+    /* display: flex; */
     /* justify-content: center; */
     /* align-items: center; */
+    background-image:  repeating-linear-gradient(45deg, var(--border-color) 25%, transparent 25%, transparent 75%, var(--border-color) 75%, var(--border-color)), repeating-linear-gradient(45deg, var(--border-color) 25%, var(--border-color-alt) 25%, var(--border-color-alt) 75%, var(--border-color) 75%, var(--border-color));
+    background-position: 0 0, 3px 3px;
+    background-size: 6px 6px;
 }
 
 main {
@@ -61,6 +95,8 @@ main {
     padding: 1rem;
     width: min(97%, 70ch);
     height: max-content;
+    border: 2px solid var(--text-color);
+    /* box-shadow: 5px 5px 0 var(--text-color); */
 }
 
 section {
