--- a/styles.css
+++ b/styles.css
@@ -30,13 +30,13 @@
 } */
 
 :root {
-    --border-color: var(--dk-grey);
-    --border-color-alt: var(--lt-grey);
-    --bg-color: var(--lt-grey);
+    --border-color: var(--lt-grey);
+    --border-color-alt: var(--white);
+    --bg-color: var(--white);
     --title-color: var(--red);
-    --heading-color: var(--dk-grey);
+    --heading-color: var(--black);
     --text-color: var(--black);
-    --link-color: var(--orange);
+    --link-color: var(--black);
     --link-hover-color: var(--purple);
     --note-color: var(--md-grey);
     --main-font-family: 'Courier New', Courier, monospace; 
@@ -80,7 +80,6 @@ input, button, textarea, select {
 body { 
     line-height: 1.5; /* This requires customizing the line height for larger text. */
     background-color: var(--border-color);
-    padding: min(3%, 1rem);
     /* height: 100vh; */
     /* display: flex; */
     /* justify-content: center; */
@@ -88,57 +87,78 @@ body {
     background-image:  repeating-linear-gradient(45deg, var(--border-color) 25%, transparent 25%, transparent 75%, var(--border-color) 75%, var(--border-color)), repeating-linear-gradient(45deg, var(--border-color) 25%, var(--border-color-alt) 25%, var(--border-color-alt) 75%, var(--border-color) 75%, var(--border-color));
     background-position: 0 0, 3px 3px;
     background-size: 6px 6px;
+    width: 100vw;
+}
+
+.content-window {
+    background-color: var(--bg-color);
+    max-width: 70ch;
+    margin: 1rem;
+    height: max-content;
+    border: 2px solid var(--text-color);
+    box-shadow: 5px 5px 0 var(--lt-grey);
+}
+
+.title-bar {
+    height: max-content;
+    border-bottom: 2px solid var(--text-color);
+}
+
+.title-lines {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.lines {
+    width: 100%;
+}
+
+hr.title-bar-line {
+    border-top: none;
+    padding: 0;
+    margin: 0.1rem 0;
+    border-bottom: 2px solid var(--text-color);
+}
+
+h1.title {
+    font-size: 1rem;
+    line-height: 1rem;
+    padding: 0.2rem 0.4rem 0;
+    margin: 0;
+    text-transform: uppercase;
 }
 
 main {
     background-color: var(--bg-color);
     padding: 1rem;
-    width: min(97%, 70ch);
-    height: max-content;
-    border: 2px solid var(--text-color);
-    /* box-shadow: 5px 5px 0 var(--text-color); */
-}
-
-section {
-    margin: 1rem 0;
-}
-
-#title {
-    line-height: 4rem;
-    font-size: 4rem;
-    color: var(--title-color);
-    font-weight: bolder;
-    word-wrap: break-word;
-}
-
-header h1 {
-    margin: 0;
 }
 
 nav ul {
+    background-color: var(--bg-color);
+    border: 2px solid var(--text-color);
     font-family: var(--main-font-family);
     list-style-type: none;
     display: flex;
     flex-wrap: wrap;
-    padding: 1rem 0 0 0;
-    gap: 1rem;
+    padding: 0 0 0 0;
+    margin-bottom: 1rem;
+    max-width: max-content;
+}
+
+nav li {
+    border-left: 2px dotted var(--text-color);
+}
+
+nav li:first-of-type {
+    border-left: none;
 }
 
 nav a,
 nav a:visited {
+    padding: 0.2rem 0.4rem;
     text-decoration: none;
-}
-
-a#title,
-a#title:visited {
-    color: var(--title-color);
-    font-weight: 900;
-    text-decoration: none;
-}
-
-a#title:hover {
-    color: var(--bg-color);
-    background-color: var(--title-color);
 }
 
 h1, h2 {
@@ -148,6 +168,12 @@ h1, h2 {
 
 h1 {
     font-size: 2rem;
+}
+
+h1:first-child,
+h2:first-child,
+p:first-child {
+    margin-top: 0;
 }
 
 p {
@@ -182,7 +208,6 @@ a,
 a:visited {
     color: var(--link-color);
     font-weight: bold;
-    /* transition: color 0.3s, background-color 0.3s; */
 }
 
 a:hover {
@@ -191,14 +216,38 @@ a:hover {
     text-decoration: none;
 }
 
-.note {
+.invisible {
+    display: none;
+}
+
+footer {
+    margin: 2rem;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+.link-icon p {
     padding: 0;
     margin: 0;
     line-height: 1.7em;
     font-size: 0.7em;
-    color: var(--note-color);
+    color: var(--dk-grey);
+    background-color: var(--bg-color);
+    text-align: center;
+    width: 100%;
+    text-wrap: wrap;
 }
 
-.invisible {
-    display: none;
+.link-icon {
+    display: flex;
+    flex-direction: column;
+    width: max-content;
+    gap: 0.2rem;
+    text-decoration: none;
+    padding: 0.2rem;
+}
+
+.link-icon:hover {
+    background-color: var(--lt-grey)
 }
