--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -67,7 +67,7 @@
                 <img src="/images/cobbland-8831.jpg" alt="old-school 88 by 31 pixel web image, orange and green, says cobb.land" height="31" width="88">
                 <p>Link to me</p>
             </a>
-            <a class="link-icon" href="/feed.rss">
+            <a class="link-icon" href="/feed.xml">
                 <img src="/images/rss-8831.jpg" alt="RSS" height="31" width="88">
                 <p>Subscribe</p>
             </a>
