--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -81,7 +81,7 @@
         <a class="u-url" rel="me" href="https://cobb.land">
         <a class="u-url" href="https://github.com/cobbland" rel="me">
         <a rel="me" class="u-url" href="https://dice.camp/@cobb">
-        <a class="u-email" href="mailto:hello@cobb.land">hello@cobb.land</a>
+        <a class="u-email" href="mailto:hello@cobb.land">
         <a class="u-logo u-photo" href="/images/android-chrome-512x512.png">
         <p class="p-note">A writer, artist, programmer, and game designer currently dwelling in the foothills of Appalachia.</p>
     </div>
