--- a/_includes/post.njk
+++ b/_includes/post.njk
@@ -2,6 +2,8 @@
 layout: "layout.html"
 ---
 
+<meta name="fediverse:creator" content="@cobb@dice.camp">
+
 <article class="h-entry">
 
     <h1 class="p-name invisible">{{ title }}</h1>
