--- a/_includes/post.njk
+++ b/_includes/post.njk
@@ -14,5 +14,7 @@ layout: "layout.html"
 
     <p class="date">Posted or edited on <a class="u-url" href="{{ post.data.url }}"><time class="dt-published dt-updated" datetime="{{ date }}">{{ date.toDateString() }}</time></a> by <a rel="author" class="p-author h-card" href="/">Cobb</a>.</p>
 
+    <img class="u-photo invisible" src="/images/android-chrome-512x512.png" />
+
 </article>
 
