--- a/_includes/post.njk
+++ b/_includes/post.njk
@@ -3,6 +3,7 @@ layout: "layout.html"
 ---
 
 <meta name="fediverse:creator" content="@cobb@dice.camp">
+<link rel="webmention" href="https://webmention.io/cobb.land/webmention" />
 
 <article class="h-entry">
 
