Copy fed and webmention to head to test

--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -12,6 +12,8 @@
     <link rel=icon href="/images/android-chrome-512x512.png" sizes="512x512" type="image/png">
     <link rel="apple-touch-icon icon" href="/images/apple-touch-icon.png" sizes="180x180" type="image/png">
     <link rel="stylesheet" href="/css/styles.css">
+    <meta name="fediverse:creator" content="@cobb@dice.camp">
+    <link rel="webmention" href="https://webmention.io/cobb.land/webmention" />
 </head>
 <body>
 
