--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="/css/styles.css">
     <meta name="fediverse:creator" content="@cobb@dice.camp">
     <link rel="webmention" href="https://webmention.io/cobb.land/webmention" />
+    <link rel="pingback" href="https://webmention.io/cobb.land/xmlrpc" />
 </head>
 <body>
 
