Try to fix u-photo on post

--- a/_includes/post.njk
+++ b/_includes/post.njk
@@ -14,7 +14,9 @@ layout: "layout.html"
 
     <a class="u-photo invisible" src="/images/android-chrome-512x512.png" />
 
-    <a rel="syndication" class="u-syndication" href="{{ possed }}">
+    <img class="u-photo invisible" src="/images/android-chrome-512x512.png" />
+
+    <a rel="syndication invisible" class="u-syndication" href="{{ possed }}">
 
 </article>
 
