--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,7 @@ body {
 
 .content-window {
     background-color: var(--bg-color);
-    max-width: 70ch;
+    max-width: 750px;
     margin: 1rem;
     height: max-content;
     border: 2px solid var(--text-color);
