--- a/_includes/post.njk
+++ b/_includes/post.njk
@@ -4,9 +4,9 @@ layout: "layout.html"
 
 <article class="h-entry">
 
-    <h1 class="p-name invisible">{{ title }}</h1>
+    <h1 class="p-name">{{ title }}</h1>
 
-    <p class="p-summary invisible">{{ summary }}</p>
+    <p class="p-summary">{{ summary }}</p>
 
     <div class="e-content">{{ content | safe}}</div>
 
