--- a/blog.njk
+++ b/blog.njk
@@ -4,7 +4,10 @@ override:layout: layout.html
 ---
 {% for post in collections.post | reverse %}
 <div class="post-card">
-    <h2><a href="{{ post.url }}">{{ post.data.title }}</a></h2>
-    <p class="date">{{ post.date.toDateString() }}</p>
+    <a href="{{ post.url }}">
+        <h2>{{ post.data.title }}</h2>
+        <p class="post-card-summary">{{ post.data.summary }}</p>
+        <p class="date">{{ post.date.toDateString() }}</p>
+    </a>
 </div>
 {% endfor %}
