Add more buttons!

--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -68,24 +68,48 @@
     <footer>
             <a class="link-icon" href="https://cobb.land">
                 <img src="/images/cobbland-8831.jpg" alt="old-school 88 by 31 pixel web image, orange and green, says cobb.land" height="31" width="88">
-                <p>Link to me</p>
+                <!-- <p>Link to me</p> -->
+            </a>
+            <a class="link-icon" href="https://cobb.land">
+                <img src="/images/cobbland-8831-c64.jpg" alt="old-school 88 by 31 pixel web image, blue and light blue, says cobb.land" height="31" width="88">
+                <!-- <p>Link to me</p> -->
+            </a>
+            <a class="link-icon" href="https://cobb.land">
+                <img src="/images/cobbland-8831-bw.jpg" alt="old-school 88 by 31 pixel web image, black and white, says cobb.land" height="31" width="88">
+                <!-- <p>Link to me</p> -->
             </a>
             <a class="link-icon" href="/feed.xml">
                 <img src="/images/rss-8831.jpg" alt="RSS" height="31" width="88">
-                <p>Subscribe</p>
+                <!-- <p>Subscribe</p> -->
             </a>
             <a class="link-icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
                 <img src="/images/by-nc-sa.png" alt="cc by-nc-sa" height="31" width="88">
-                <p>CC BY-NC-SA</p>
+                <!-- <p>CC BY-NC-SA</p> -->
+            </a>
+            <a class="link-icon" href="https://indieweb.org/">
+                <img src="/images/indieweb-88x31.gif" alt="EWC Now! indieweb.org" height="31" width="88">
+                <!-- <p>indieweb.org</p> -->
+            </a>
+            <a class="link-icon" href="https://indieweb.org/">
+                <img src="/images/indieweb88x31-flat.png" alt="Eindieweb.org" height="31" width="88">
+                <!-- <p>indieweb.org</p> -->
+            </a>
+            <a class="link-icon" href="https://indieweb.org/Webmention">
+                <img src="/images/webmention88x31-flat.png" alt="webmentions" height="31" width="88">
+                <!-- <p>indieweb.org</p> -->
+            </a>
+                        <a class="link-icon" href="https://microformats.org/">
+                <img src="/images/microformats88x31-flat.png" alt="microformats" height="31" width="88">
+                <!-- <p>indieweb.org</p> -->
             </a>
     </footer>
 
     <div class="h-card invisible">
-        <a class="u-url" rel="me" href="https://cobb.land">
-        <a class="u-url" href="https://github.com/cobbland" rel="me">
-        <a rel="me" class="u-url" href="https://dice.camp/@cobb">
-        <a class="u-email" href="mailto:hello@cobb.land">
-        <a class="u-logo u-photo" href="/images/android-chrome-512x512.png">
+        <a class="u-url" rel="me" href="https://cobb.land"></a>
+        <a class="u-url" href="https://github.com/cobbland" rel="me"></a>
+        <a rel="me" class="u-url" href="https://dice.camp/@cobb"></a>
+        <a class="u-email" href="mailto:hello@cobb.land"></a>
+        <a class="u-logo u-photo" href="/images/android-chrome-512x512.png"></a>
         <p class="p-note">A writer, artist, programmer, and game designer currently dwelling in the foothills of Appalachia.</p>
     </div>
 
