--- a/_includes/post.njk
+++ b/_includes/post.njk
@@ -12,11 +12,17 @@ layout: "layout.html"
 
     <p class="date">Posted or edited on <a class="u-url" href="{{ post.data.url }}"><time class="dt-published dt-updated" datetime="{{ date }}">{{ date.toDateString() }}</time></a> by <a rel="author" class="p-author h-card" href="/">Cobb</a>.</p>
 
-    <a class="u-photo invisible" src="/images/android-chrome-512x512.png" />
+    <a class="u-photo invisible" src="/images/android-chrome-512x512.png" /></a>
 
     <img class="u-photo invisible" src="/images/android-chrome-512x512.png" />
 
-    <a rel="syndication invisible" class="u-syndication" href="{{ possed }}">
+    <a rel="syndication invisible" class="u-syndication" href="{{ possed }}"></a>
 
 </article>
+
+<div class="reply-buttons">
+    <a class="link-button" href="https://webmention.io/cobb.land/webmention"><img src="/images/webmention-88x31.jpg" alt="webmention button" /></a>
+    <a class="link-button" href="mailto:hello@cobb.land"><img src="/images/email-88x31.jpg" alt="email button" /></a>
+    <a class="link-button" href="{{ possed }}"><img src="/images/mastodon-88x31.jpg" alt="mastodon button" /></a>
+</div>
 
