--- a/css/styles.css
+++ b/css/styles.css
@@ -268,10 +268,18 @@ h1.invisible {
     display: none;
 }
 
+.reply-buttons {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.4rem;
+    margin-top: 0.8rem;
+}
+
 footer {
     margin: 2rem;
     display: flex;
     flex-wrap: wrap;
+    max-width: 525px;
 }
 
 .link-icon p {
@@ -292,7 +300,7 @@ footer {
     width: max-content;
     gap: 0.2rem;
     text-decoration: none;
-    padding: 0.2rem;
+    /* padding: 0.2rem; */
     margin: 0.4rem;
 }
 
