Update webmentions button link

--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -94,7 +94,7 @@
                 <img src="/images/indieweb88x31-flat.png" alt="Eindieweb.org" height="31" width="88">
                 <!-- <p>indieweb.org</p> -->
             </a>
-            <a class="link-icon" href="https://indieweb.org/Webmention">
+            <a class="link-icon" href="https://www.w3.org/TR/webmention/">
                 <img src="/images/webmention88x31-flat.png" alt="webmentions" height="31" width="88">
                 <!-- <p>indieweb.org</p> -->
             </a>
