Add stuff from old site

--- a/blog.njk
+++ b/blog.njk
@@ -1,6 +1,6 @@
 ---
 title: Blog
-override:layout: layout.html
+layout: layout.html
 ---
 {% for post in collections.post | reverse %}
 <div class="post-card">
