Hide decrative hrs from screenreaders

--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -43,7 +43,7 @@
     <div class="content-window">
         <div class="title-bar">
             <div class="title-lines">
-                <div class="lines">
+                <div class="lines" aria-hidden="true">
                     <hr class="title-bar-line">
                     <hr class="title-bar-line">
                     <hr class="title-bar-line">
@@ -51,7 +51,7 @@
                     <hr class="title-bar-line">
                 </div>
                 <h1 class="title"><a class="backlink {{ special | default: "no-slash" }}" href="../">{{ special | default: "" }}</a><span class="title-text">{{ title }}</span></h1>
-                <div class="lines">
+                <div class="lines" aria-hidden="true">
                     <hr class="title-bar-line">
                     <hr class="title-bar-line">
                     <hr class="title-bar-line">
