Fix up h-card a bit

--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -118,10 +118,10 @@
     </footer>
 
     <div class="h-card invisible">
-        <a class="u-url" rel="me" href="https://cobb.land"></a>
+        <a class="u-url p-name" rel="me" href="https://cobb.land">Cobb</a>
         <a class="u-url" href="https://github.com/cobbland" rel="me"></a>
-        <a rel="me" class="u-url" href="https://dice.camp/@cobb"></a>
-        <a class="u-email" href="mailto:hello@cobb.land"></a>
+        <a rel="me" class="u-url" href="https://dice.camp/@cobb">@cobb@dice.camp</a>
+        <a class="u-email" href="mailto:hello@cobb.land">hello@cobb.land</a>
         <a class="u-logo u-photo" href="/images/android-chrome-512x512.png"></a>
         <p class="p-note">A writer, artist, programmer, and game designer currently dwelling in the foothills of Appalachia.</p>
     </div>
