--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -106,13 +106,26 @@
                 <rect height="31" width="88" fill="#ff5c00"></rect>
                 <image href="/images/mayastransparentbutton.png" opacity="0.6"></image>
                 <a href="https://xn--sr8hvo.ws/previous">
-                <text y="19px" x="3px" style="letter-spacing: -0.1em; font-size: 14px;stroke: white;paint-order: stroke;stroke-width: 2px; fill: black;">←</text>
+                <text y="19px" x="4px" style="letter-spacing: -0.1em; font-size: 20px;stroke: white;paint-order: stroke;stroke-width: 2px; fill: black;">←</text>
                 </a>
                 <a href="https://xn--sr8hvo.ws">
                 <text y="21px" style="font-size: 18px; filter: drop-shadow(1px 0 0 white) drop-shadow(-1px 0 0 white) drop-shadow(0 1px 0 white) drop-shadow(0 -1px 0 white);" x="23px">🕸💍</text>
                 </a>
                 <a href="https://xn--sr8hvo.ws/next">
-                <text y="19px" style="font-size: 14px; letter-spacing: -0.1em; stroke: white;paint-order: stroke;stroke-width: 2px; fill: black;" x="71px">→</text>
+                <text y="19px" style="font-size: 20px; letter-spacing: -0.1em; stroke: white;paint-order: stroke;stroke-width: 2px; fill: black;" x="71px">→</text>
+                </a>
+            </svg>
+            <svg class="link-icon" id="fediring" xmlns="http://www.w3.org/2000/svg" height="31" width="88" style="image-rendering: crisp-edges; vertical-align: middle;">
+                <rect height="31" width="88" fill="#ccc"></rect>
+                <image href="/images/mayastransparentbutton.png" opacity="0.6"></image>
+                <a href="https://fediring.net/previous?host=cobb.land">
+                <text y="19px" x="4px" style="letter-spacing: -0.1em; font-size: 20px;stroke: white;paint-order: stroke;stroke-width: 2px; fill: black;">←</text>
+                </a>
+                <a href="https://fediring.net">
+                <text y="19px" style="font-size: 10px; filter: drop-shadow(1px 0 0 white) drop-shadow(-1px 0 0 white) drop-shadow(0 1px 0 white) drop-shadow(0 -1px 0 white);" x="19px">fediring</text>
+                </a>
+                <a href="https://fediring.net/next?host=cobb.land">
+                <text y="19px" style="font-size: 20px; letter-spacing: -0.1em; stroke: white;paint-order: stroke;stroke-width: 2px; fill: black;" x="71px">→</text>
                 </a>
             </svg>
     </footer>
