Add random button for indiewebring

--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -103,16 +103,23 @@
                 <!-- <p>indieweb.org</p> -->
             </a>
             <svg class="link-icon" id="indiewebring" xmlns="http://www.w3.org/2000/svg" height="31" width="88" style="image-rendering: crisp-edges; vertical-align: middle;">
-                <rect height="31" width="88" fill="#ff5c00"></rect>
+                <rect height="31" width="88" fill="#FC4F1E"></rect>
                 <image href="/images/mayastransparentbutton.png" opacity="0.6"></image>
                 <a href="https://xn--sr8hvo.ws/previous">
                 <text y="19px" x="4px" style="letter-spacing: -0.1em; font-size: 20px;stroke: white;paint-order: stroke;stroke-width: 2px; fill: black;">←</text>
                 </a>
                 <a href="https://xn--sr8hvo.ws">
-                <text y="21px" style="font-size: 18px; filter: drop-shadow(1px 0 0 white) drop-shadow(-1px 0 0 white) drop-shadow(0 1px 0 white) drop-shadow(0 -1px 0 white);" x="23px">🕸💍</text>
+                <text y="21px" x="23px" style="font-size: 18px; filter: drop-shadow(1px 0 0 white) drop-shadow(-1px 0 0 white) drop-shadow(0 1px 0 white) drop-shadow(0 -1px 0 white);">🕸💍</text>
                 </a>
                 <a href="https://xn--sr8hvo.ws/next">
                 <text y="19px" style="font-size: 20px; letter-spacing: -0.1em; stroke: white;paint-order: stroke;stroke-width: 2px; fill: black;" x="71px">→</text>
+                </a>
+            </svg>
+            <svg class="link-icon" id="indiewebring" xmlns="http://www.w3.org/2000/svg" height="31" width="88" style="image-rendering: crisp-edges; vertical-align: middle;">
+                <rect height="31" width="88" fill="#FD8F25"></rect>
+                <image href="/images/mayastransparentbutton.png" opacity="0.6"></image>
+                <a href="https://xn--sr8hvo.ws/random">
+                <text y="21px" x="10px" style="font-size: 18px; filter: drop-shadow(1px 0 0 white) drop-shadow(-1px 0 0 white) drop-shadow(0 1px 0 white) drop-shadow(0 -1px 0 white);">🕸💍🎲</text>
                 </a>
             </svg>
             <svg class="link-icon" id="fediring" xmlns="http://www.w3.org/2000/svg" height="31" width="88" style="image-rendering: crisp-edges; vertical-align: middle;">
