--- a/blog.njk
+++ b/blog.njk
@@ -1,6 +1,7 @@
 ---
 title: Blog
 layout: layout.html
+tags: slashpage
 ---
 {% for post in collections.post | reverse %}
 <div class="post-card">
@@ -11,3 +12,5 @@ layout: layout.html
     </a>
 </div>
 {% endfor %}
+
+<p>Subscribe via <a href="/feed.xml">RSS</a>.</p>
