--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -22,7 +22,7 @@
         <nav>
             <ul>
                 <li>
-                    <a class="logo-image" href="/"><img src="/images/logotinywhite.png" alt=""><img src="/images/logotiny.png" alt="">cobb.land</a>
+                    <a class="logo-image" href="/"><img src="/images/logotinywhite.png" alt="logo"><img src="/images/logotiny.png" alt="logo">cobb.land</a>
                 </li>
                 <li>
                     <a href="/about">About</a>
