Correct found errors in HTML

--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -13,8 +13,8 @@
     <link rel="apple-touch-icon icon" href="/images/apple-touch-icon.png" sizes="180x180" type="image/png">
     <link rel="stylesheet" href="/css/styles.css">
     <meta name="fediverse:creator" content="@cobb@dice.camp">
-    <link rel="webmention" href="https://webmention.io/cobb.land/webmention" />
-    <link rel="pingback" href="https://webmention.io/cobb.land/xmlrpc" />
+    <link rel="webmention" href="https://webmention.io/cobb.land/webmention">
+    <link rel="pingback" href="https://webmention.io/cobb.land/xmlrpc">
 </head>
 <body>
 
@@ -102,9 +102,9 @@
                 <img src="/images/microformats88x31-flat.png" alt="microformats" height="31" width="88">
                 <!-- <p>indieweb.org</p> -->
             </a>
-            <svg class="link-icon" id="indiewebring" xmlns="http://www.w3.org/2000/svg" height="31" width="88" style="image-rendering: crisp-edges; vertical-align: middle;">
+            <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" height="31" width="88" style="image-rendering: crisp-edges; vertical-align: middle;">
                 <rect height="31" width="88" fill="#FC4F1E"></rect>
-                <image href="/images/mayastransparentbutton.png" opacity="0.6"></image>
+                <image href="/images/button-outline-88x31.png" opacity="0.6" height="31" width="88"></image>
                 <a href="https://xn--sr8hvo.ws/previous">
                 <text y="19px" x="4px" style="letter-spacing: -0.1em; font-size: 20px;stroke: white;paint-order: stroke;stroke-width: 2px; fill: black;">←</text>
                 </a>
@@ -115,16 +115,16 @@
                 <text y="19px" style="font-size: 20px; letter-spacing: -0.1em; stroke: white;paint-order: stroke;stroke-width: 2px; fill: black;" x="71px">→</text>
                 </a>
             </svg>
-            <svg class="link-icon" id="indiewebring" xmlns="http://www.w3.org/2000/svg" height="31" width="88" style="image-rendering: crisp-edges; vertical-align: middle;">
+            <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" height="31" width="88" style="image-rendering: crisp-edges; vertical-align: middle;">
                 <rect height="31" width="88" fill="#FD8F25"></rect>
-                <image href="/images/mayastransparentbutton.png" opacity="0.6"></image>
+                <image href="/images/button-outline-88x31.png" opacity="0.6" height="31" width="88"></image>
                 <a href="https://xn--sr8hvo.ws/random">
                 <text y="21px" x="10px" style="font-size: 18px; filter: drop-shadow(1px 0 0 white) drop-shadow(-1px 0 0 white) drop-shadow(0 1px 0 white) drop-shadow(0 -1px 0 white);">🕸💍🎲</text>
                 </a>
             </svg>
-            <svg class="link-icon" id="fediring" xmlns="http://www.w3.org/2000/svg" height="31" width="88" style="image-rendering: crisp-edges; vertical-align: middle;">
+            <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" height="31" width="88" style="image-rendering: crisp-edges; vertical-align: middle;">
                 <rect height="31" width="88" fill="#ccc"></rect>
-                <image href="/images/mayastransparentbutton.png" opacity="0.6"></image>
+                <image href="/images/button-outline-88x31.png" opacity="0.6" height="31" width="88"></image>
                 <a href="https://fediring.net/previous?host=cobb.land">
                 <text y="19px" x="4px" style="letter-spacing: -0.1em; font-size: 20px;stroke: white;paint-order: stroke;stroke-width: 2px; fill: black;">←</text>
                 </a>
