--- a/blog.njk
+++ b/blog.njk
@@ -1,7 +1,7 @@
 ---
 title: Blog
 layout: layout.html
-tags: slashpage
+tags: [slashpage, page]
 ---
 {% for post in collections.post | reverse %}
 <div class="post-card">
