--- a/index.njk
+++ b/index.njk
@@ -13,7 +13,7 @@ special: home-title
         <h2>Posts</h2>
     
         <ul>
-            {% for post in collections.post | reverse %}
+            {% for post in collections.post | limit(4) %}
                 <li>
                     <a href="{{ post.url }}">
                         {{ post.data.title }}
@@ -31,7 +31,7 @@ special: home-title
     
         <div>
             <ul class="pages">
-                {% for page in collections.page | reverse %}
+                {% for page in collections.page | limit(12) | sort(attribute='data.title') %}
                     <li>
                         <a href="{{ page.url }}">
                             {{ page.data.title }}
