--- a/more.njk
+++ b/more.njk
@@ -4,7 +4,7 @@ layout: layout.html
 ---
 <div class="more-page">
     <ul>
-        {% for page in collections.page | reverse %}
+        {% for page in collections.page | sort(attribute='data.title') %}
             <li>
                 <a href="{{ page.url }}">
                     {{ page.data.title }}
