Change blog to posts and more to pages

--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -31,10 +31,10 @@
                     <a href="/contact">Contact</a>
                 </li>
                 <li>
-                    <a href="/blog">Blog</a>
+                    <a href="/pages">Pages</a>
                 </li>
-                <li class="more">
-                    <a href="/more">More</a>
+                <li>
+                    <a href="/posts">Posts</a>
                 </li>
             </ul>
         </nav>
