--- a/index.njk
+++ b/index.njk
@@ -23,7 +23,7 @@ special: home-title
             {% endfor %}
         </ul>
     
-        <p><a href="/blog">More posts</a></p>
+        <p><a href="/posts">More posts</a></p>
     </div>
     
     <div>
@@ -41,6 +41,6 @@ special: home-title
             </ul>
         </div>
     
-        <p><a href="/more">More pages</a></p>
+        <p><a href="/pages">More pages</a></p>
     </div>
 </div>
