--- a/_includes/post.njk
+++ b/_includes/post.njk
@@ -12,6 +12,15 @@ layout: "layout.html"
 
     <p class="date">Posted or edited on <a class="u-url" href="{{ post.data.url }}"><time class="dt-published dt-updated" datetime="{{ date }}">{{ date.toDateString() }}</time></a> by <a rel="author" class="p-author h-card" href="/">Cobb</a>.</p>
 
+{#    <div class="tags">
+        <p>Tags:</p>
+        {% for tag in tags %}
+            <a href="" class="post-tag">
+                {{ tag }}
+            </a>
+        {% endfor %}
+    </div> #}
+
     <a class="u-photo invisible" src="/images/android-chrome-512x512.png" /></a>
 
     <img class="u-photo invisible" src="/images/android-chrome-512x512.png" />
