--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -82,6 +82,12 @@
                 <img src="/images/rss-8831.jpg" alt="RSS" height="31" width="88">
                 <!-- <p>Subscribe</p> -->
             </a>
+            <a class="link-icon" href="https://www.11ty.dev/">
+                <img src="/images/eleventy.gif" alt="built with 11ty" height="31" width="88">
+            </a>
+            <a class="link-icon" href="https://moonpr1sm.com/random/30plusclub">
+                <img src="/images/30plusclub.gif" alt="30+ club" height="31" width="88">
+            </a>
             <a class="link-icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
                 <img src="/images/by-nc-sa.png" alt="cc by-nc-sa" height="31" width="88">
                 <!-- <p>CC BY-NC-SA</p> -->
