--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -88,6 +88,9 @@
             <a class="link-icon" href="https://moonpr1sm.com/random/30plusclub">
                 <img src="/images/30plusclub.gif" alt="30+ club" height="31" width="88">
             </a>
+            <a class="link-icon" href="https://32bit.cafe/">
+                <img src="/images/32b-pcb.png" alt="32b cafe" height="31" width="88">
+            </a>
             <a class="link-icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
                 <img src="/images/by-nc-sa.png" alt="cc by-nc-sa" height="31" width="88">
                 <!-- <p>CC BY-NC-SA</p> -->
