--- a/index.njk
+++ b/index.njk
@@ -32,7 +32,7 @@ special: home-title
         <h2>Posts</h2>
     
         <ul class="posts">
-            {% for post in collections.post | limit(6) %}
+            {% for post in collections.post | reverse | limit(6) %}
                 <li>
                     <a href="{{ post.url }}">
                         {{ post.data.title }}
