--- a/index.njk
+++ b/index.njk
@@ -6,7 +6,7 @@ special: home-title
 
 <h2>Howdy!</h2>
 
-<p>I'm <a href="/about">Jacob</a> (or Cobb or cobbland or cobb-dot-land) and this is my <a href="/colophon">website</a>. Follow my <a href="/feed.xml">RSS feed</a> to keep up. I also have a <a href="https://buttondown.com/orbitaldetritus">newsletter</a> (for some reason). And you can find me on the <a href="https://dice.camp/@cobb">Fediverse</a>.</p>
+<p>I'm <a href="/about">Cobb</a> (or cobbland or cobb-dot-land or even Jacob) and this is my <a href="/colophon">website</a>. Follow my <a href="/feed.xml">RSS feed</a> to keep up. I also have a <a href="https://buttondown.com/orbitaldetritus">newsletter</a> (for some reason). And you can find me on the <a href="https://dice.camp/@cobb">Fediverse</a>.</p>
 
 <div class="home-latest">
 
