--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -136,6 +136,13 @@
                 <text y="19px" style="font-size: 20px; letter-spacing: -0.1em; stroke: white;paint-order: stroke;stroke-width: 2px; fill: black;" x="71px">→</text>
                 </a>
             </svg>
+            <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" height="31" width="88" style="image-rendering: crisp-edges; vertical-align: middle;">
+                <rect height="31" width="88" fill="#555"></rect>
+                <image href="/images/button-outline-88x31.png" opacity="0.6" height="31" width="88"></image>
+                <a href="">
+                <text y="21px" x="18px" style="font-size: 14px; filter: drop-shadow(1px 0 0 white) drop-shadow(-1px 0 0 white) drop-shadow(0 1px 0 white) drop-shadow(0 -1px 0 white);">© {% year %}</text>
+                </a>
+            </svg>
     </footer>
 
     <div class="h-card invisible">
