--- a/posts/hello-world.njk
+++ b/posts/hello-world.njk
@@ -5,12 +5,11 @@ date: 2025-07-23T17:41:00.00-04:00
 possed: https://dice.camp/@cobb/114904926288167522
 ---
 
-<div class="code-outer">
+<div class="c64-code-outer">
 
-<div class="code">
+<div class="c64-code-inner">
 
-```
-    **** COMMODORE 64 BASIC V2 ****
+<pre><code class="c64-code">    **** COMMODORE 64 BASIC V2 ****
  64K RAM SYSTEM  38911 BASIC BYTES FREE
 
 READY.
@@ -18,7 +17,7 @@ PRINT "HELLO WORLD"
 HELLO WORLD
 
 READY.
-```
+</code></pre>
 
 </div>
 
