--- a/_includes/post.njk
+++ b/_includes/post.njk
@@ -10,7 +10,7 @@ layout: "layout.html"
 
     <div class="e-content">{{ content | safe}}</div>
 
-    <p class="date">Posted or edited on <a class="u-url" href="{{ post.data.url }}"><time class="dt-published dt-updated" datetime="{{ date }}">{{ date.toDateString() }}</time></a> by <a rel="author" class="p-author h-card" href="/">Cobb</a>.</p>
+    <p class="date">Posted or edited on <a class="u-url" href="{{ page.url }}"><time class="dt-published dt-updated" datetime="{{ date }}">{{ date.toDateString() }}</time></a> by <a rel="author" class="p-author h-card" href="/">Cobb</a>.</p>
 
 {#    <div class="tags">
         <p>Tags:</p>
@@ -36,4 +36,3 @@ layout: "layout.html"
     <a class="link-button" href="mailto:hello@cobb.land"><img src="/images/email-88x31.jpg" alt="email button" height="31" width="88" /></a>
     <a class="link-button" href="{{ possed }}"><img src="/images/mastodon-88x31.jpg" alt="mastodon button" height="31" width="88" /></a>
 </div>
-
